something beginning with gh pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
 
-    <title>Komma Stromlos</title>
+    <title>Komma Stromlos Something beginning with K</title>
 
   </head>
 
